acertos na configuracao do application.properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 spring.datasource.url=${URL_DATABASE}?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=${USERNAME_DATABASE}
