--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/financeiro?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=178209
+spring.profiles.active=dev
+#spring.profiles.active=produ
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/financeiro?createDatabaseIfNotExist=true&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=178209
+
+
+spring.datasource.url=${URL_DATABASE}?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=${USERNAME_DATABASE}
+spring.datasource.password=${PASSWORD_DATABASE}
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
