--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,6 @@
-spring.profiles.active=dev
-
-spring.datasource.url=${URL_DATABASE}?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=${USERNAME_DATABASE}
-spring.datasource.password=${PASSWORD_DATABASE}
+spring.datasource.url=jdbc:mysql://db:3306/financeiro?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=178209
 
 
 spring.jpa.show-sql=true
